--- a/index.html
+++ b/index.html
@@ -11,7 +11,27 @@
 
 </head>
 <body>
- 
+
+    <!-- Jumbotron -->
+    <div>
+        
+    </div>
+
+    <!-- Row -->
+ <div class = "row">
+
+    <!-- Card -->
+    <div class = "col-3">
+
+    </div>
+    <!-- grid -->
+    <div class = "col-9">
+
+    </div>
+
+</div>
+
+
 
 <script src="/js/script.js"></script>
 </body>
