--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 
     <!-- Jumbotron -->
     <div>
-        
+        <header>
+            <h1>JUMBOTRON</h1>
+        </header>
     </div>
 
     <!-- Row -->
- <div class = "row">
+    <div class = "row">
 
     <!-- Card -->
     <div class = "col-3">
