--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
     <title>Project Tracker</title>
     <link rel="stylesheet" href="./assets/styles/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link href="code.jquery.com/jquery-3.6.0.min.js">
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link href="https://code.jquery.com/jquery-3.6.0.min.js">
 
 </head>
 <body>
 
     <!-- Jumbotron -->
-    <div>
-        <header>
-            <h1>JUMBOTRON</h1>
-        </header>
-    </div>
+    <div class="jumbotron">
+        <h1 class="display-4">Hello, world!</h1>
+        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <hr class="my-4">
+        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+      </div>
 
     <!-- Row -->
     <div class = "row">
@@ -35,6 +36,6 @@
 
 
 
-<script src="/js/script.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
