--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Project Tracker</title>
     <link rel="stylesheet" href="./assets/styles/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link href="code.jquery.com/jquery-3.6.0.min.js">
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link href="https://code.jquery.com/jquery-3.6.0.min.js">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
 </head>
 <body>
@@ -16,23 +16,54 @@
     <div>
         
     </div>
-
+<div class="container">
     <!-- Row -->
- <div class = "row">
+    <div class = "row">
 
-    <!-- Card -->
-    <div class = "col-3">
-
+        <!-- Card -->
+        <div class = "col-3">
+            Something
+        </div>
+        <!-- grid -->
+        <div class="col-9">
+        <table class = "table table-bordered">
+            Table with list of project parts
+            <thead>
+                <tr>
+                <th scope="col">#</th>
+                <th scope="col">First</th>
+                <th scope="col">Last</th>
+                <th scope="col">Handle</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+                </tr>
+                <tr>
+                <th scope="row">2</th>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+                </tr>
+                <tr>
+                <th scope="row">3</th>
+                <td colspan="2">Larry the Bird</td>
+                <td>@twitter</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
-    <!-- grid -->
-    <div class = "col-9">
-        Table with list of project parts
+
     </div>
 
 </div>
 
 
 
-<script src="/js/script.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
