--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Project Tracker</title>
     <link rel="stylesheet" href="./assets/styles/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link href="code.jquery.com/jquery-3.6.0.min.js">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
 </head>
@@ -21,9 +20,19 @@
  <div class = "row">
 
     <!-- Card -->
-    <div class = "col-3">
-
-    </div>
+    <div class="card col-3" style="width: 18rem;">
+        <div class="card-header bg-dark text-white d-flex justify-content-center">
+          Instructions
+        </div>
+        <ul class="list-group list-group-flush">  
+        <li class="list-group-item"><p class = "font-weight-bold">Click the button below to open a form and provide information for the following:</p></li>
+          <li class="list-group-item">Project Name</li>
+          <li class="list-group-item">Project Type</li>
+          <li class="list-group-item">Due Date</li>
+          <li class="list-group-item">Hourly Rate</li>
+          <a href="#" class="btn btn-primary">Add Project</a>
+        </ul>
+      </div>
     <!-- grid -->
     <div class = "col-9">
 
