added Moment to the file

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 <body>
 
     <!-- Jumbotron -->
-    <div class="jumbotron">
-        <h1 class="display-4">Hello, world!</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-        <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-      </div>
+    <div class="jumbotron bg-dark text-white d-flex">
+        <div class="container ">
+            <h1 class="display-4">Project Tracker</h1>
+            <p class="lead">Current Time & Date:</p>
+            <p id="current-time">current time and date here</p>
+        </div>
+    </div>
 
     <!-- Row -->
     <div class = "row">
@@ -35,7 +36,7 @@
 </div>
 
 
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
